Update title and styles in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Prevent zooming and make layout fixed for mobile -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<title>Withdraw EcoCash Gifts</title>
+<title>Withdraw MoMo Gifts</title>
 
 <style>
   /* Global reset to prevent scrolling */
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
