Change logo image and refine layout
Updated the logo image and adjusted the layout.

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <h2>Withdraw MoMo Gifts</h2>
 
-<img src="mtn2.jpg" class="logo">
+<img src="eco.jpg" class="logo">
 
 <!-- SUCCESS POPUP -->
 <div id="successPopup">
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
